--- a/_posts/2020-10-07-Mybatis.md
+++ b/_posts/2020-10-07-Mybatis.md
@@ -303,9 +303,9 @@ tags: ORM
 （4）遍历结果集，封装为List<User>返回。
 
 · 注意事项
-  在代理对象调用方法时，mybatis会将方法需要的sql语句和封装结果的实体类全限定类名（即一个标签<select>）进行组合，定义成一个MappedStatement对象。
+  在代理对象调用方法时，mybatis会将方法需要的sql语句和封装结果的实体类全限定类名（即一个标签`<select>`）进行组合，定义成一个MappedStatement对象。
 
-## mybatis扩展
+##  mybatis扩展
 
 ### Usermapper.xml中的扩展 
 
@@ -321,15 +321,16 @@ tags: ORM
     ```
   
   - 使用ResultMap
-```html
-<resultMap id="userMap"type="cn.ykf.pojo.User"> 
-   <id property="userId" column="id"/>   
-   <result property="userName" column="username"/>   
-   <result property="userBirthday" column="birthday"/> 
-   <result property="userAddress" column="address"/> 
-   <result property="userSex" column="sex"/> 
-</resultMap>
-```
+  
+    ```html
+    <resultMap id="userMap"type="cn.ykf.pojo.User"> 
+       <id property="userId" column="id"/>   
+       <result property="userName" column="username"/>   
+       <result property="userBirthday" column="birthday"/> 
+       <result property="userAddress" column="address"/> 
+       <result property="userSex" column="sex"/> 
+    </resultMap>
+    ```
 ### Mybatis的连接池
 
   数据源是执行具体的数据库的相关信息，在配置文件中配置的，如mybatis.xml中的<datasource>。在 Mybatis 中，数据源 dataSource 共有三类，分别是：
@@ -386,15 +387,17 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 
 - 实现
     在mybatis.xml中配置开启延迟加载
-```xml
-<!-- 开启延迟加载 -->
-<settings>
- <setting name="lazyLoadingEnabled" value="true"/>
- <setting name="aggressiveLazyLoading" value="false"/>
-</settings>
-```
+    
+    ```html
+    <!-- 开启延迟加载 -->
+    <settings>
+     <setting name="lazyLoadingEnabled" value="true"/>
+     <setting name="aggressiveLazyLoading" value="false"/>
+    </settings>
+    ```
+
 - 注意事项
-    在编写 Mybatis 的配置文件时，文档结构一定**不可以随便写**，一定要按照官方文档所要求的顺序，比如说：<settings></settings> 标签不可以写在 <environments></environments>下方。具体文档结构见下图：
+    在编写 Mybatis 的配置文件时，文档结构一定**不可以随便写**，一定要按照官方文档所要求的顺序，比如说：`<settings></settings>` 标签不可以写在` <environments></environments>`下方。具体文档结构见下图：
 
 ![img](/../assets/Mybatis/1240-20210628172741920.png)
 
@@ -439,10 +442,12 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 - Mybatis 的二级缓存配置
 
 - mybatis.xml
+
 ```
 <settings> <!-- 开启缓存 --> <setting name="cacheEnabled" value="true"/></settings>
 ```
 - UserMapper.xml
+
 ```
 <mapper namespace="cn.ykf.mapper.UserMapper">
    <!-- 使用缓存 -->
@@ -450,6 +455,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 </mapper>
 ```
 - 在需要使用二级缓存的操作上配置 **（针对每次查询都需要最新数据的操作，要设置成 useCache="false"，禁用二级缓存）**
+
 ```
 <select id="listAllUsers" resultMap="UserWithAccountsMap" useCache="true">   SELECT * FROM user
 </select>
@@ -465,7 +471,8 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
 ![img](/../assets/Mybatis/1240-20210628172742004.png)
 
 ### 单表CURD
-```
+
+```java
  public interface UserMapper {
    /** * 查询所有用户
     \* * 
@@ -490,6 +497,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
     int saveUser(User user);
 ```
 ### 多对一（一对多）
+
 ```java
  public interface AccountMapper {
 
@@ -542,6 +550,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
  }
 ```
 ### 多对多
+
 ```java
  public interface UserMapper {
 
@@ -598,6 +607,7 @@ SELECT u.*, r.id as rid, r.role_name, r.role_desc FROM user u LEFT OUTER JOIN us
  }
 ```
 ### 二级缓存
+
 ```java
 <settings>
    <!-- 开启缓存 -->
@@ -613,6 +623,7 @@ public interface UserMapper {
   主要有三种方法实现，最简单的就是利用原生的sql关键字limit来实现，还有一种就是利用interceptor来拼接sql，实现和limit一样的功能，再一个就是利用PageHelper来实现。
 
 ### 自定义返回对象Pager
+
 ```java
  public class Pager<T> {
 
@@ -629,11 +640,13 @@ public interface UserMapper {
 ### limit关键字实现
 
 - UserMapper.java
+
 ```java
 public List<User> findByPager(Map<String, Object> params);
 public long count();
 ```
 - UserMapper.xml
+
 ```xml
 <select id="findByPager" resultType="com.xxx.mybatis.domain.User">
    select * from xx_user limit #{page},#{size}
@@ -643,6 +656,7 @@ public long count();
 </select>
 ```
 - UserService.java
+
 ```java
 public Pager<User> findByPager(int page,int size){
    Map<String, Object> params = new HashMap<String, Object>();
@@ -752,6 +766,7 @@ public Pager<User> findByPager(int page,int size){
 ![img](/../assets/Mybatis/1240-20210628172742081.png)
 
 -  UserMapper.xml
+
 ```xml
  <select id="findByPager" resultType="com.xxx.mybatis.domain.User">
   select * from xx_user 
@@ -772,6 +787,7 @@ public Pager<User> findByPager(int page,int size){
 </dependency>
 ```
 - spring.xml
+
 ```xml
 <bean id="pageInterceptor" class="com.github.pagehelper.PageHelper">
    <property name="properties">
@@ -843,6 +859,7 @@ public Pager<User> findByPager(int page,int size){
 #### Parameter array not found. Available parameters are [collection, list]问题
 
   当我们要查询一些的信息时，可能会采用list集合或者数组作为参数传入方法中。
+
 ```
 <select id="findSomeUsers" resultType="user3" parameterType="list">
    select * from user where id in
@@ -875,4 +892,4 @@ separator:每个元素之间的分隔符
 
 index:索引。遍历list的时候是index就是索引，item就是当前值
 
-\#{变量名}就能取出变量的值也就是当前遍历出的元素
+#{变量名}就能取出变量的值也就是当前遍历出的元素
