--- a/_posts/2021-07-07-华为.md
+++ b/_posts/2021-07-07-华为.md
@@ -132,97 +132,5 @@ tags: 笔经面经
 
    > 象棋背景下，给定起始点，给定终点，棋盘上还有其他子，还有用“马”的方式跳跃（有约束条件）。问能否到终点，能到的话，最少跳跃步数是多少？
 
-   这题我的思路是类似于leetcode的单词搜索，但是做题的时候只剩40分钟了，来不及调试，代码超出时间限制，后面有时间好好找找原因，所以这题没有通过。下面是**没有通过**的代码，记录一下，后面再查一下。
+   这题我的思路是类似于leetcode的单词搜索，但是做题的时候只剩40分钟了，来不及调试，代码超出时间限制，后面有时间好好找找原因，所以这题没有通过。
 
-   >import java.util.*;
-   >
-   >public class FX2 {
-   >	/*
-   >	 * 5 13
-   >	........H...#
-   >	........#....
-   >	.....#.......
-   >	.#...........
-   >	..........T#.
-   >	 */
-   >    static int w, h;
-   >    static int[][] direction = new int[][]{{-1, -2}, {-2, -1}, {-2, 1}, {-1, 2}, {1, 2}, {2, 1}, {2, -1}, {1, -2}};
-   >    static int[][] dangers = new int[][]{{0, -1}, {-1, 0}, {-1, 0}, {0, 1}, {0, 1}, {1, 0}, {1, 0}, {0, -1}};
-   >    static boolean[][] used;
-   >    static boolean flag = false;
-   >    static int minStep = Integer.MAX_VALUE;
-   >    static List<int[]> others;
-   >    public static void main(String[] args){
-   >        Scanner sc = new Scanner(System.in);
-   >        w = sc.nextInt();
-   >        h = sc.nextInt();
-   >        used = new boolean[w][h];
-   >        String s = sc.nextLine();
-   >        System.out.print(s);
-   >        char[][] chess = new char[w][h];
-   >        int[] H = new int[2];
-   >        int[] T = new int[2];
-   >        others = new ArrayList();
-   >        for(int i = 0; i < w; i++){
-   >            s = sc.nextLine();
-   >            s = s.trim();
-   >            for(int j = 0; j < s.length(); j++){
-   >                chess[i][j] = s.charAt(j);
-   >                if(chess[i][j] == 'H'){
-   >                    H[0] = i;
-   >                    H[1] = j;
-   >                }else if(chess[i][j] == 'T'){
-   >                    T[0] = i;
-   >                    T[1] = j;
-   >                }else if(chess[i][j] == '#'){
-   >                    others.add(new int[]{i, j});
-   >                }
-   >            }
-   >        }
-   >        dfs(chess, H[0], H[1], T, 0);
-   >        if(!flag){
-   >            System.out.println(-1);
-   >        }else {
-   >            System.out.println(minStep);
-   >        }
-   >    }
-   >
-   >    public static void dfs(char[][] chess, int x, int y, int[] T, int step){
-   >//    	System.out.println(x + "  " + y);
-   >        if(x == T[0] && y == T[1]){
-   >            flag = true;
-   >            minStep = Math.min(minStep, step);
-   >            return;
-   >        }
-   >        used[x][y] = true;
-   >        for(int i = 0; i < 8; i++){
-   >            int nextx = x + direction[i][0];
-   >            int nexty = y + direction[i][1];
-   >            if(isValid(nextx, nexty) && !used[nextx][nexty] && !isDanger(nextx, nexty)){
-   >                step++;
-   >                dfs(chess, nextx, nexty, T, step);
-   >                step--;
-   >            }
-   >        }
-   >        used[x][y] = false;
-   >    }
-   >    
-   >
-   >    public static boolean isValid(int x, int y){
-   >        return x >= 0 && x < w && y >= 0 && y < h;
-   >    }
-   >    
-   >    public static boolean isDanger(int x, int y){
-   >        for(int i = 0; i < 8; i++){
-   >            if(dangers[i][0] == x && dangers[i][1] == y){
-   >                return true;
-   >            }
-   >        }
-   >        for(int[] n : others) {
-   >        	if(n[0] == x && n[1] == y) {
-   >        		return true;
-   >        	}
-   >        }
-   >        return false;
-   >    }
-   >}
