--- a/_posts/2021-07-07-华为.md
+++ b/_posts/2021-07-07-华为.md
@@ -133,4 +133,9 @@ tags: 笔经面经
    > 象棋背景下，给定起始点，给定终点，棋盘上还有其他子，还有用“马”的方式跳跃（有约束条件）。问能否到终点，能到的话，最少跳跃步数是多少？
 
    这题我的思路是类似于leetcode的单词搜索，但是做题的时候只剩40分钟了，来不及调试，代码超出时间限制，后面有时间好好找找原因，所以这题没有通过。
+   
+   问题找到了，主要是**剪枝和回溯return位置**的问题。
+   
+   <img src="../../../../Typora/picture/6650D184-903C-4B96-955F-E5ED30E37ED8_1_105_c.jpeg" style="zoom:50%;" />
 
+<img src="../../../../Typora/picture/8D6C60CC-29B1-4E15-B0AD-1BC4D897EE73.png" style="zoom:50%;" />
