--- a/_posts/2021-07-07-华为.md
+++ b/_posts/2021-07-07-华为.md
@@ -136,6 +136,6 @@ tags: 笔经面经
    
    问题找到了，主要是**剪枝和回溯return位置**的问题。
    
-   <img src="../../../../Typora/picture/6650D184-903C-4B96-955F-E5ED30E37ED8_1_105_c.jpeg" style="zoom:50%;" />
+   <img src="/../assets/Exam/6650D184-903C-4B96-955F-E5ED30E37ED8_1_105_c.jpeg" style="zoom:50%;" />
 
-<img src="../../../../Typora/picture/8D6C60CC-29B1-4E15-B0AD-1BC4D897EE73.png" style="zoom:50%;" />
+<img src="/../assets/Exam/8D6C60CC-29B1-4E15-B0AD-1BC4D897EE73.png" style="zoom:50%;" />
