--- a/_posts/2021-07-07-华为.md
+++ b/_posts/2021-07-07-华为.md
@@ -139,3 +139,7 @@ tags: 笔经面经
    <img src="/../assets/Exam/6650D184-903C-4B96-955F-E5ED30E37ED8_1_105_c.jpeg" style="zoom:50%;" />
 
 <img src="/../assets/Exam/8D6C60CC-29B1-4E15-B0AD-1BC4D897EE73.png" style="zoom:50%;" />
+
+## 测评
+
+2021年7月8日，就是笔试的第二天收到了测评邮件，2021年7与9日写的测评，36道性格测评题，大概40分钟不到写完。
