--- a/_posts/2020-12-03-数据结构和算法.md
+++ b/_posts/2020-12-03-数据结构和算法.md
@@ -931,3 +931,12 @@ public class CountingSort{
   相当于穷举搜索的巧妙实现。
 
   在一步内删除一大组可能性的做法叫做**裁剪（剪枝）**。
+
+## DFS与BFS
+
+​	[什么时候用深搜（dfs）什么时候用广搜（bfs)](https://www.cnblogs.com/Annetree/p/7199358.html)]
+
+- **BFS是用来搜索最短径路的解**是比较合适的，比如求最少步数的解，最少交换次数的解，因为BFS搜索过程中遇到的解一定是离根最近的，所以遇到一个解，一定就是最优解，此时搜索算法可以终止。这个时候不适宜使用DFS，因为DFS搜索到的解不一定是离根最近的，只有全局搜索完毕，才能从所有解中找出离根的最近的解。（当然这个DFS的不足，可以使用迭代加深搜索ID-DFS去弥补）
+- 空间优劣上，DFS是有优势的，DFS不需要保存搜索过程中的状态，而BFS在搜索过程中需要保存搜索过的状态，而且一般情况需要一个队列来记录。
+- **DFS适合搜索全部的解**，因为要搜索全部的解，那么BFS搜索过程中，遇到离根最近的解，并没有什么用，也必须遍历完整棵搜索树，DFS搜索也会搜索全部，但是相比DFS不用记录过多信息，所以搜素全部解的问题，DFS显然更加合适。
+
