补充知识点

--- a/_posts/2020-10-14-JavaWeb.md
+++ b/_posts/2020-10-14-JavaWeb.md
@@ -859,6 +859,12 @@ GET /day09/hello HTTP/1.1
 
 参考：[HTTPS详解 - 我是码客 - 博客园](https://www.cnblogs.com/makelu/p/11140824.html)
 
+### 其他知识点
+
+- [HTTPS 证书被伪造了怎么办？](https://blog.csdn.net/weixin_39843414/article/details/108744377)
+
+- [https可否有效应对dns劫持、http内容劫持](https://blog.csdn.net/LS7011846/article/details/106782890)
+
 ### 其他加密算法
 
 #### AES
