--- a/_posts/2020-11-02-计算机网络.md
+++ b/_posts/2020-11-02-计算机网络.md
@@ -554,6 +554,10 @@ tags: Web基础
 
 <img src="/../assets/Web/1240-20210701120906973.jpeg" alt="img" style="zoom:50%;" />
 
+（3）DNS劫持
+
+[DNS劫持](https://www.hack520.com/330.html)
+
 ## FTP
 
 （1）概念
