--- a/_posts/2021-01-20-Shop.md
+++ b/_posts/2021-01-20-Shop.md
@@ -549,3 +549,147 @@ spring:
 8、从json中提取实体类：ItemEntity item = itemJson.getObject(Constants.HTTP_RES_CODE_DATA, ItemEntity.class)
 
 9、springcloud的api接口的参数需要用@RequestParam
+
+## 电商系统/秒杀系统常见问题
+
+### 问题概览
+
+- 库存预热
+
+  提前把商品的库存加载到Redis中去，让整个流程都在Redis里面去做，然后等秒杀结束了，再异步的去修改库存就好了。
+
+- 用户下单
+
+  为了提升下单速度，我们将订单数据存入到redis缓存中，如果用户支付了，再将redis中的订单存到Mysql中，并清空redis中的订单。如果没有库存了，则将缓存中的商品数据同步到Mysql中，并情况redis中该商品的缓存。
+  
+
+- 创建订单
+
+  用户每次下单的时候，我们可以创建一个队列进行排队，然后采用异步的方式创建订单，排队我们可以采用Redis的队列实现。如果符合下单资格，只需要先记录用户下单数据，存入redis队列（先不要创建订单），然后采用异步创建订单的方式，从redis队列中，读取下单信息，创建订单。
+
+  [redis队列的实现](https://www.jianshu.com/p/d32b16f12f09)
+
+- 下单状态查询
+
+  我们需要做一个页面判断，每过1s查询一次下单状态。
+
+- 防止重复排队
+
+  我们用一个保存排队信息的hash键值对。用户每次抢单的时候，一旦排队，我们设置一个自增值，让该值的初始值为1，只有当该值为1的时候才能进行后续下单操作。如果值>1，则表明已经排队,不允许重复排队,如果重复排队，则对外抛出异常，并抛出异常信息100表示已经正在排队。
+
+- 超卖问题
+
+  判断商品数量的时候，不要用传统的读取操作，而是用redis的增量命令，才能确保数据的精准性。
+
+  [redis的增量命令](https://www.redis.net.cn/order/3559.html)
+
+- 订单支付
+
+  下单成功后会跳转到支付页面，支付页面会根据用户名查看用户订单，创建预支付信息，发送请求到支付中心，获取二维码。支付状态通过回调地址发送给MQ，我们需要侦听这个MQ，如果支付成功，则修改订单状态，将订单信息写入mysql，清除redis中的订单信息和排队信息等。如果支付失败，则删除订单，回滚库存。
+
+- 超时支付订单库存回滚
+
+  如果一段时间未支付，则需要回滚库存，删除订单操作。采用rabbitMQ的延时消息队列来实现。
+  Rabbitmq实现延时队列一般而言有两种形式：
+  	- 第一种方式：利用两个特性： Time To Live(TTL)、Dead Letter Exchanges（DLX）[A队列过期->转发给B队列]
+  	- 第二种方式：利用rabbitmq中的插件x-delay-message
+  	TTL
+  	RabbitMQ可以针对队列设置x-expires(则队列中所有的消息都有相同的过期时间)或者针对Message设置x-message-ttl(对消息进行单独设置，每条消息TTL可以不同)，来控制消息的生存时间，如果超时(两者同时设置以最先到期的时间为准)，则消息变为dead letter(死信)
+  	Dead Letter Exchanges（DLX）
+  	RabbitMQ的Queue可以配置x-dead-letter-exchange和x-dead-letter-routing-key（可选）两个参数，如果队列内出现了dead letter，则按照这两个参数重新路由转发到指定的队列。
+  	x-dead-letter-exchange：出现dead letter之后将dead letter重新发送到指定exchange
+  	x-dead-letter-routing-key：出现dead letter之后将dead letter重新按照指定的routing-key发送
+
+### 超卖问题
+
+总结：
+
+- SQL层面：where条件
+- 服务端代码层面：乐观锁
+- 架构层面：队列 ｜ Redis减库存
+
+1. 参考[高并发下怎样优雅的保证扣减库存数据的正确性](https://blog.csdn.net/wnn654321/article/details/114992680)
+
+   - 如果扣减多个库存num时
+     `update coupon set stock=stock - #{num} where id = #{couponId} and stock >= #{num}`
+
+   - 解释场景：
+
+     使用业务自身的条件做为乐观锁，但是存在ABA问题，对比其他方案的好处是不用增加version版本字段。
+
+     id是主键索引的前提下，采用上面的方式，只做数据安全校验，可以有效减库存，性能更高，避免大量无用sql，只要有库存就也可以操作成功.
+
+2. 参考[秒杀系统如何防止超卖？](https://blog.csdn.net/weixin_43167418/article/details/105154209)
+
+   为了解决上面的超卖问题，我们当然可以**在Service层给更新表添加一个事务**，这样每个线程更新请求的时候都会先去锁表的这一行（悲观锁），更新完库存后再释放锁。可这样就太慢了，1000个线程可等不及。
+
+   所以我们需要**乐观锁**。一个最简单的办法就是，**给每个商品库存一个版本号version字段**
+
+   ```mysql
+   CREATE TABLE `stock` (
+     `id` int(11) unsigned NOT NULL AUTO_INCREMENT,
+     `name` varchar(50) NOT NULL DEFAULT '' COMMENT '名称',
+     `count` int(11) NOT NULL COMMENT '库存',
+     `sale` int(11) NOT NULL COMMENT '已售',
+     `version` int(11) NOT NULL COMMENT '乐观锁，版本号',
+     PRIMARY KEY (`id`)
+   ) ENGINE=InnoDB DEFAULT CHARSET=utf8;
+   ```
+
+   我们在实际减库存的SQL操作中，首先判断version是否是我们查询库存时候的version，如果是，扣减库存，成功抢购。如果发现version变了，则不更新数据库，返回抢购失败。
+
+   ```xml
+   <update id="updateByOptimistic" parameterType="cn.monitor4all.miaoshadao.dao.Stock">
+       update stock
+       <set>
+         sale = sale + 1,
+         version = version + 1,
+       </set>
+       WHERE id = #{id,jdbcType=INTEGER}
+       AND version = #{version,jdbcType=INTEGER}
+     </update>
+   ```
+
+3. 参考[解决秒杀系统超卖问题的三种方案](https://www.freesion.com/article/8294437894/)
+
+   - 引入队列，然后将所有写DB操作在单队列中排队，完全串行处理。当达到库存阀值的时候就不在消费队列，并关闭购买功能。这就解决了超卖问题。
+     优点：解决超卖问题，略微提升性能。
+     缺点：性能受限于队列处理机处理性能和DB的写入性能中最短的那个，另外多商品同时抢购的时候需要准备多条队列。
+
+   - 将写操作前移到Memcached中，同时利用Memcached的轻量级的锁机制CAS来实现减库存操作。
+     优点：读写在内存中，操作性能快，引入轻量级锁之后可以保证同一时刻只有一个写入成功，解决减库存问题。
+     缺点：没有实测，基于CAS的特性不知道高并发下是否会出现大量更新失败？不过加锁之后肯定对并发性能会有影响。
+
+   - 将提交操作变成两段式，先申请后确认。然后利用Redis的原子自增操作（相比较MySQL的自增来说没有空洞），同时利用Redis的事务特性来发号，保证拿到小于等于库存阀值的号的人都可以成功提交订单。然后数据异步更新到DB中。
+     优点：解决超卖问题，库存读写都在内存中，故同时解决性能问题。
+     缺点：由于异步写入DB，可能存在数据不一致。另可能存在少买，也就是如果拿到号的人不真正下订单，可能库存减为0，但是订单数并没有达到库存阀值。
+
+4. 常见减库存的方式
+
+   电商场景下的购买过程一般分为两步：下单和付款。“提交订单”即为下单，“支付订单”即为付款。基于此设定，减库存一般有以下几个方式：
+
+   > - **下单减库存。**买家下单后，扣减商品库存。下单减库存是最简单的减库存方式，也是控制最为精确的一种
+   > - **付款减库存。**买家下单后，并不立即扣减库存，而是等到付款后才真正扣减库存。但因为付款时才减库存，如果并发比较高，可能出现买家下单后付不了款的情况，因为商品已经被其他人买走了
+   > - **预扣库存。**这种方式相对复杂一些，买家下单后，库存为其保留一定的时间（如 15 分钟），超过这段时间，库存自动释放，释放后其他买家可以购买
+
+   能够看到，减库存方式是基于购物过程的多阶段进行划分的，但无论是在下单阶段还是付款阶段，都会存在一些问题。
+
+   **预扣库存**是目前比较流行的方式。
+
+### 支付的幂等性
+
+#### 定义
+
+1. 前端重复提交选中的数据，后台应该只产生对应本次提交的一个响应结果。
+
+2. 用户发起一笔付款请求，应该只扣除用户账号一次钱，即使遇到网络重发或系统bug重发时，也只扣除一次钱。 
+
+3. 创建业务订单时，一次业务请求只能创建一个订单 
+
+#### 实现幂等
+
+**需要有唯一标识来标记请求，比如订单号，token等。**
+
+1. 先查询一下订单是否已经支付过； 
+
+2. 如果已经支付过，则返回支付成功；如果没有支付，进行支付流程，修改订单状态为‘已支付’。 保证幂等性就需要查询和变更状态操作加锁，将并行操作改为串行操作。
