--- a/_posts/2020-10-14-JavaWeb.md
+++ b/_posts/2020-10-14-JavaWeb.md
@@ -683,6 +683,8 @@ session.removeAttribute("sesionToken");
 
   超文本传输协议，是浏览器个服务端之间数据传输的格式规范。HTTP使用TCP作为传输层协议，但HTTP本身是无连接、无状态的，可以短连接（Http/1.0），也可以长连接（Http/1.1 保持一段时间）。
 
+[http的无连接、无状态的意思](https://blog.csdn.net/tennysonsky/article/details/44562435)
+
 ## Http请求
 
 ### 请求格式
