--- a/_posts/2021-01-20-Shop.md
+++ b/_posts/2021-01-20-Shop.md
@@ -562,7 +562,6 @@ spring:
 
   为了提升下单速度，我们将订单数据存入到redis缓存中，如果用户支付了，再将redis中的订单存到Mysql中，并清空redis中的订单。如果没有库存了，则将缓存中的商品数据同步到Mysql中，并情况redis中该商品的缓存。
   
-
 - 创建订单
 
   用户每次下单的时候，我们可以创建一个队列进行排队，然后采用异步的方式创建订单，排队我们可以采用Redis的队列实现。如果符合下单资格，只需要先记录用户下单数据，存入redis队列（先不要创建订单），然后采用异步创建订单的方式，从redis队列中，读取下单信息，创建订单。
@@ -693,3 +692,7 @@ spring:
 1. 先查询一下订单是否已经支付过； 
 
 2. 如果已经支付过，则返回支付成功；如果没有支付，进行支付流程，修改订单状态为‘已支付’。 保证幂等性就需要查询和变更状态操作加锁，将并行操作改为串行操作。
+
+### 懒删除
+
+​	实战项目中对记录的删除，是调整某字段值，比如1为显示，-1为不显示。
