--- a/_posts/2020-10-14-JavaWeb.md
+++ b/_posts/2020-10-14-JavaWeb.md
@@ -805,7 +805,11 @@ GET /day09/hello HTTP/1.1
 
 ​      200：  表示请求处理完成并完美返回
 
-​      302：  表示请求需要进一步细化。 404：  表示客户访问的资源找不到。
+​      302：  表示请求需要进一步细化。 
+
+​	  304：当用户第一次请求index.html时，服务器会添加一个名为Last-Modified响应头，这个头说明了index.html的最后修改时间，浏览器会把index.html内容，以及最后响应时间缓存下来。当用户第二次请求index.html时，在请求中包含一个名为If-Modified-Since请求头，它的值就是第一次请求时服务器通过Last-Modified响应头发送给浏览器的值，即index.html最后的修改时间，If-Modified-Since请求头就是在告诉服务器，我这里浏览器缓存的index.html最后修改时间是这个，您看看现在的index.html最后修改时间是不是这个，如果还是，那么您就不用再响应这个index.html内容了，我会把缓存的内容直接显示出来。而服务器端会获取If-Modified-Since值，与index.html的当前最后修改时间比对，**如果相同，服务器会发响应码304，表示index.html与浏览器上次缓存的相同，无需再次发送(节省传输成本）**，浏览器可以显示自己的缓存页面，如果比对不同，那么说明index.html已经做了修改，服务器会响应200。
+
+​	  404：  表示客户访问的资源找不到。
 
 ​      500：  表示服务器的资源发送错误。（服务器内部错误）
 
