添加用户登陆验证相关知识

--- a/_posts/2020-10-14-JavaWeb.md
+++ b/_posts/2020-10-14-JavaWeb.md
@@ -533,6 +533,16 @@ HttpSession类：用于保存会话数据
 
 （2）如果浏览器禁用cookie可以将JSESSIONID写到用户请求的URL中。
 
+​	比如，可以通过表单中的隐藏域，具体实现参考：[Session的url重写](https://blog.csdn.net/weixin_33810302/article/details/85590011)
+
+```html
+<form name="testform” action="/xxx"> 
+  <input type="hidden" name="jsessionid"
+         value="ByOK3vjFD75aPnrF7C2HmdnV6QZcEbzWoWiBYEnLerjQ99zWpBng!-145788764"> 
+  <input type="text"> 
+</form>
+```
+
 （3）如何避免浏览器的JSESSIONID的cookie随着浏览器关闭而丢失的问题
 ```java
  /**
