--- a/_posts/2021-01-20-Shop.md
+++ b/_posts/2021-01-20-Shop.md
@@ -530,7 +530,7 @@ spring:
 
 ## 一些开发笔记
 
-都是我踩过的坑：
+### 我踩过的坑：
 
 1、通过@requestBody可以将请求体中的JSON字符串绑定到相应的bean上，当然，也可以将其分别绑定到对应的字符串上。
 
@@ -549,6 +549,12 @@ spring:
 8、从json中提取实体类：ItemEntity item = itemJson.getObject(Constants.HTTP_RES_CODE_DATA, ItemEntity.class)
 
 9、springcloud的api接口的参数需要用@RequestParam
+
+### 关于用户登录信息验证
+
+​	我这里的设计为：cookie验证登陆+redis存储用户信息/状态(openid)。用户登录时生成随机令牌token，写cookie("token", token)，在写redis(token, openid)。用户再次登陆时cookie中携带token，即可验证状态。
+
+​	如果客户端禁用cookie，这里可以设置session重写。用户登陆后写session("token", openid)，后将对应的JSSESSIONID写入页面的隐藏域中。下次登陆时页面填入JSSESSIONID发送给客户端，登陆后即可验证登陆状态。
 
 ## 电商系统/秒杀系统常见问题
 
