--- a/_posts/2020-10-14-JavaWeb.md
+++ b/_posts/2020-10-14-JavaWeb.md
@@ -1202,6 +1202,48 @@ GET /day09/hello HTTP/1.1
 
 [03-shiro权限系统-单点登陆 - 简书](https://www.jianshu.com/p/f12a0aa51d70)
 
+# OAuth认证和验证
+
+参考：[4种模式](https://blog.csdn.net/yonhu123java/article/details/108276882)、[流程](https://blog.csdn.net/iteye_5904/article/details/82542557?utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-1.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-1.control)、[总体](https://blog.csdn.net/little_kelvin/article/details/111232009?utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-3.control&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EBlogCommendFromMachineLearnPai2%7Edefault-3.control)
+
+## 概念
+
+- OAuth(开放授权)是一个开放标准。
+- 允许第三方网站在用户授权的前提下访问在用户在服务商那里存储的各种信息。而这种授权无需将用户提供用户名和密码提供给该第三方网站。
+- OAuth允许用户提供一个令牌给第三方网站，一个令牌对应一个特定的第三方网站，同时该令牌只能在特定的时间内访问特定的资源。
+
+## 流程
+
+- OAuth的认证和授权的过程中涉及的三方包括：
+  服务商：用户使用服务的提供方，一般用来存消息、储照片、视频、联系人、文件等(比如Twitter、Sina微波等)。
+  用  户：服务商的用户
+  第三方：通常是网站，该网站想要访问用户存储在服务商那里的信息。
+
+  比如某个提供照片打印服务的网站，用户想在那里打印自己存在服务商那里的网络相册。在认证过程之前，第三方需要先向服务商申请第三方服务的唯一标识。
+
+- OAuth认证和授权的过程如下:
+
+  1. 用户访问第三方网站网站，想对用户存放在服务商的某些资源进行操作。
+  2. 第三方网站向服务商请求一个临时令牌。
+  3. 服务商验证第三方网站的身份后，授予一个临时令牌。
+  4. 第三方网站获得临时令牌后，将用户导向至服务商的授权页面请求用户授权，然后这个过程中将临时令牌和第三方网站的返回地址发送给服务商。
+  5. 用户在服务商的授权页面上输入自己的用户名和密码，授权第三方网站访问所相应的资源。
+  6. 授权成功后，服务商将用户导向第三方网站的返回地址。
+  7. 第三方网站根据临时令牌从服务商那里获取访问令牌。
+  8. 服务商根据令牌和用户的授权情况授予第三方网站访问令牌。
+  9. 第三方网站使用获取到的访问令牌访问存放在服务商的对应的用户资源。
+
+  ![img](/../assets/JavaWeb/Center.jpeg)
+
+## 模式
+
+| 类型                | 描述                                                   |
+| ------------------- | ------------------------------------------------------ |
+| 授权码模式          | 基于授权码code，是最严谨，最安全，流程最完整的授权模式 |
+| 隐藏式 （简化模式） | 授权码模式的简化版本，缺少了授权码环节                 |
+| 密码模式            | 第三方应用直接使用资源拥有者的用户密码去获取令牌       |
+| 客户端凭证模式      | 第三方应用使用客户端凭证请求令牌                       |
+
 # 常见问题总结
 
 ## **eclipse 开发web程序**
