mysql博客增加insert语法

--- a/_posts/2021-06-30-SQL语句与MySQL基础原理.md
+++ b/_posts/2021-06-30-SQL语句与MySQL基础原理.md
@@ -313,6 +313,11 @@ where location_id=1700
 ## 数据处理之增删改
 ### （1）插入数据
 
+- mysql中常用的三种插入数据的语句:
+  - insert into表示插入数据，数据库会检查主键，如果出现重复会报错；
+  - replace into表示插入替换数据，需求表中有PrimaryKey，或者unique索引，如果数据库已经存在数据，则用新数据替换，如果没有数据效果则和insert into一样；
+  - insert ignore表示，如果中已经存在相同的记录，则忽略当前新数据；
+
 <img src="/../assets/MySQL/1240-20210630204744787.png" alt="image.png" style="zoom:50%;" />
 <img src="/../assets/MySQL/1240-20210630204744814.png" alt="image.png" style="zoom:50%;" />
 
