增加mysql强制索引、触发器知识

--- a/_posts/2021-06-30-SQL语句与MySQL基础原理.md
+++ b/_posts/2021-06-30-SQL语句与MySQL基础原理.md
@@ -586,6 +586,25 @@ where location_id=1700
 
 <img src="/../assets/MySQL/1240-20210630204745368.png" alt="image.png" style="zoom:50%;" />
 
+## 触发器
+
+详细内容参考：[MySQL | 触发器](https://blog.csdn.net/babycan5/article/details/82789099)，[MySQL数据库触发器讲解与案例](https://blog.csdn.net/weixin_41177699/article/details/80302987)
+
+### 基本概念
+
+**触发器**是一种特殊类型的存储过程，它不同于存储过程，主要是通过事件触发而被执行的，即不是主动调用而执行的；而存储过程则需要主动调用其名字执行
+
+触发器：trigger，是指事先为某张表绑定一段代码，当表中的某些内容发生改变（增、删、改）的时候，系统会自动触发代码并执行。
+
+### 语法
+
+```mysql
+create trigger 触发器名字 触发时间 触发事件 on 表 for each row
+begin
+    -- 触发器内容主体，每行用分号结尾
+end
+```
+
 ## 流程控制
 
 （1）case结构——作为表达式
@@ -1005,6 +1024,7 @@ MyISAM不支持，而InnoDB支持
 ## 分类
 
 （1）主键索引
+
 - 唯一性索引，必须指定为“PRIMARY KEY”。每个表只能有一个主键，主键也不能为空
 - 方式：
             · CREATE TABLE tablename ( [...], PRIMARY KEY (列的列表) )
@@ -1029,10 +1049,6 @@ MyISAM不支持，而InnoDB支持
 - 关于辅助索引的执行流程
 [MySQL的数据结构以及辅助索引的使用_MemoForward的博客-CSDN博客_mysql辅助索引](https://blog.csdn.net/qq_34294121/article/details/101632347)
 
-- 关于覆盖索引
-[什么是覆盖索引?如何利用覆盖索引进行SQL语句优化？_斜阳雨陌-CSDN博客_覆盖索引](https://blog.csdn.net/qq_15037231/article/details/87891683)
-[为什么覆盖索引可以加快查询](https://mp.weixin.qq.com/s?__biz=Mzg5NjMxMTYxNQ==&mid=2247488048&idx=1&sn=a5b62a41b83350644a919b49de78ee59&source=41#wechat_redirect)
-
 
 **注意区别**
 - 主键创建后一定包含一个唯一性索引，唯一性索引并不一定就是主键。
@@ -1042,6 +1058,16 @@ MyISAM不支持，而InnoDB支持
 - 一个表最多只能创建一个主键，但可以创建多个唯一索引。
 - 主键更适合那些不容易更改的唯一标识，如自动递增列、身份证号等。
 - 在 RBO 模式下，主键的执行计划优先级要高于唯一索引。 两者可以提高查询的速度。
+
+其他参考资料：[索引的分类](https://www.cnblogs.com/luyucheng/p/6289714.html)
+
+## 覆盖索引
+[什么是覆盖索引?如何利用覆盖索引进行SQL语句优化？_斜阳雨陌-CSDN博客_覆盖索引](https://blog.csdn.net/qq_15037231/article/details/87891683)
+[为什么覆盖索引可以加快查询](https://mp.weixin.qq.com/s?__biz=Mzg5NjMxMTYxNQ==&mid=2247488048&idx=1&sn=a5b62a41b83350644a919b49de78ee59&source=41#wechat_redirect)
+
+## 强制索引
+
+[mysql优化之强制索引](https://www.lmlphp.com/user/552/article/item/33599/)
 
 ## 查询索引命令
 - show index from 表名
