更新SQL语句相关知识

--- a/_posts/2021-06-30-SQL语句与MySQL基础原理.md
+++ b/_posts/2021-06-30-SQL语句与MySQL基础原理.md
@@ -368,13 +368,21 @@ where location_id=1700
 <img src="/../assets/MySQL/1240-20210630204745027.png" alt="image.png" style="zoom:50%;" />
 
 - 追加一个新列
-<img src="/../assets/MySQL/1240-20210630204745042.png" style="zoom:50%;" />
+  <img src="/../assets/MySQL/1240-20210630204745042.png" style="zoom:50%;" />
 - 修改一个列
-<img src="/../assets/MySQL/1240-20210630204745079.png" alt="image.png" style="zoom:50%;" />
+  <img src="/../assets/MySQL/1240-20210630204745079.png" alt="image.png" style="zoom:50%;" />
 - 删除一个列
-<img src="/../assets/MySQL/1240-20210630204745045.png" alt="image.png" style="zoom:50%;" />
+  <img src="/../assets/MySQL/1240-20210630204745045.png" alt="image.png" style="zoom:50%;" />
 - 重命名一个列
-<img src="/../assets/MySQL/1240-20210630204745056.png" alt="image.png" style="zoom:50%;" />
+  <img src="/../assets/MySQL/1240-20210630204745056.png" alt="image.png" style="zoom:50%;" />
+- 总结如下：
+  - **ALTER TABLE 表名 ADD 列名/索引/主键/外键等；**
+  - **ALTER TABLE 表名 DROP 列名/索引/主键/外键等；**
+  - **ALTER TABLE 表名 ALTER 仅用来改变某列的默认值；**
+  - **ALTER TABLE 表名 RENAME 列名/索引名 TO 新的列名/新索引名；**
+  - **ALTER TABLE 表名 RENAME TO/AS 新表名;**
+  - **ALTER TABLE 表名 MODIFY 列的定义但不改变列名；**
+  - **ALTER TABLE 表名 CHANGE 列名和定义都可以改变。**
 #### （4）删除表
 
 <img src="/../assets/MySQL/1240-20210630204745062.png" alt="image.png" style="zoom:50%;" />
