mysql中添加group_concat函数

--- a/_posts/2021-06-30-SQL语句与MySQL基础原理.md
+++ b/_posts/2021-06-30-SQL语句与MySQL基础原理.md
@@ -252,10 +252,16 @@ mysql内连接 [inner] join on
 ## 常见函数
 ### 字符函数
 <img src="/../assets/MySQL/1240-20210630204744547.png" alt="image.png" style="zoom:50%;" />
+
 ####（1）大小写控制函数
+
 <img src="/../assets/MySQL/1240-20210630204744561.png" alt="image.png" style="zoom:50%;" />
+
 ####（2）字符控制函数
+
 <img src="/../assets/MySQL/1240-20210630204744587.png" alt="image.png" style="zoom:50%;" />
+
+- 对于CONCAT函数，还有**concat_ws()函数**、**group_concat**，详见[CONCAT函数相关](https://blog.csdn.net/harry5508/article/details/102481017)
 
 ### 数学函数
 <img src="/../assets/MySQL/1240-20210630204744592.png" alt="image.png" style="zoom:50%;" />
