--- a/_posts/2021-09-07-Go学习笔记.md
+++ b/_posts/2021-09-07-Go学习笔记.md
@@ -384,6 +384,40 @@ l= 24
 | [for 循环](https://www.runoob.com/go/go-for-loop.html)     | 重复执行语句块                       |
 | [循环嵌套](https://www.runoob.com/go/go-nested-loops.html) | 在 for 循环中嵌套一个或多个 for 循环 |
 
+注意：Go 语言中 range 关键字用于 for 循环中迭代数组(array)、切片(slice)、通道(channel)或集合(map)的元素。在数组和切片中它返回元素的索引和索引对应的值，在集合中返回 key-value 对。
+
+```go
+// demo
+package main
+import "fmt"
+func main() {
+    //这是我们使用range去求一个slice的和。使用数组跟这个很类似
+    nums := []int{2, 3, 4}
+    sum := 0
+    for _, num := range nums {
+        sum += num
+    }
+    fmt.Println("sum:", sum)
+    //在数组上使用range将传入index和值两个变量。上面那个例子我们不需要使用该元素的序号，所以我们使用空白符"_"省略了。有时侯我们确实需要知道它的索引。
+    for i, num := range nums {
+        if num == 3 {
+            fmt.Println("index:", i)
+        }
+    }
+    //range也可以用在map的键值对上。
+    kvs := map[string]string{"a": "apple", "b": "banana"}
+    for k, v := range kvs {
+        fmt.Printf("%s -> %s\n", k, v)
+    }
+    //range也可以用来枚举Unicode字符串。第一个参数是字符的索引，第二个是字符（Unicode的值）本身。
+    for i, c := range "go" {
+        fmt.Println(i, c)
+    }
+}
+```
+
+
+
 | [break 语句](https://www.runoob.com/go/go-break-statement.html) | 经常用于中断当前 for 循环或跳出 switch 语句      |
 | ------------------------------------------------------------ | ------------------------------------------------ |
 | [continue 语句](https://www.runoob.com/go/go-continue-statement.html) | 跳过当前循环的剩余语句，然后继续进行下一轮循环。 |
@@ -542,3 +576,445 @@ func main() {
 nil 指针也称为空指针。
 
 nil在概念上和其它语言的null、None、nil、NULL一样，都指代零值或空值。
+
+## 结构体
+
+数组可以存储同一类型的数据，但在结构体中我们可以为不同项定义不同的数据类型。
+
+### 语法
+
+- 定义
+
+```go
+type struct_variable_type struct {
+   member definition
+   member definition
+   ...
+   member definition
+}
+```
+
+- 声明
+
+```go
+variable_name := structure_variable_type {value1, value2...valuen}
+或
+variable_name := structure_variable_type { key1: value1, key2: value2..., keyn: valuen}
+```
+
+```go
+// demo
+package main
+
+import "fmt"
+
+type Books struct {
+   title string
+   author string
+   subject string
+   book_id int
+}
+
+
+func main() {
+
+    // 创建一个新的结构体
+    fmt.Println(Books{"Go 语言", "www.runoob.com", "Go 语言教程", 6495407})
+
+    // 也可以使用 key => value 格式
+    fmt.Println(Books{title: "Go 语言", author: "www.runoob.com", subject: "Go 语言教程", book_id: 6495407})
+
+    // 忽略的字段为 0 或 空
+   fmt.Println(Books{title: "Go 语言", author: "www.runoob.com"})
+```
+
+- 访问结构体成员，需要使用点号 **.** 操作符
+
+### 作为函数参数
+
+- 结构体
+- 结构体指针
+
+## 切片（Slice）
+
+Go 语言切片是对数组的抽象。
+
+Go 数组的长度不可改变，在特定场景中这样的集合就不太适用，Go 中提供了一种灵活，功能强悍的内置类型切片("动态数组")，与数组相比切片的长度是不固定的，可以追加元素，在追加时可能使切片的容量增大。
+
+### 创建
+
+- 未指定大小的数组来定义切片
+
+  ```go
+  var identifier []type
+  ```
+
+- **make()** 函数来创建切片:
+
+  ```go
+  var slice1 []type = make([]type, len) //  len 是数组的长度并且也是切片的初始长度
+  
+  //也可以简写为
+  
+  slice1 := make([]type, len)
+  ```
+
+  也可以指定容量，其中 **capacity** 为可选参数。
+
+  ```go
+  make([]T, length, capacity)
+  ```
+
+### 初始化
+
+- 直接初始化
+
+  ```go
+  s :=[] int {1,2,3 } 
+  ```
+
+- 通过数组/切片初始化
+
+  ```go
+  s := arr[:] 
+  s := arr[startIndex:endIndex] 
+  s1 := s[startIndex:endIndex] 
+  ```
+
+- make()函数初始化
+
+  ```go
+  s :=make([]int,len,cap) 
+  ```
+
+注意：个切片在未初始化之前默认为 nil，长度为 0
+
+### 相关函数
+
+- len() 获取长度
+
+- cap() 测量切片最长可以达到多少
+
+- append() 向切片追加新元素
+
+  ```go
+  numbers = append(numbers, 1)
+  ```
+
+- copy() 拷贝切片
+
+  ```go
+  /* 拷贝 numbers 的内容到 numbers1 */
+     copy(numbers1,numbers)
+  ```
+
+## Map集合
+
+Map 是一种无序的键值对的集合。Map 最重要的一点是通过 key 来快速检索数据，key 类似于索引，指向数据的值。
+
+Map 是一种集合，所以我们可以像迭代数组和切片那样迭代它。不过，Map 是无序的，我们无法决定它的返回顺序，这是因为 Map 是使用 hash 表来实现的。
+
+### 定义
+
+- map关键字
+
+  ```go
+  /* 声明变量，默认 map 是 nil */
+  var map_variable map[key_data_type]value_data_type
+  ```
+
+- make
+
+  ```go
+  /* 使用 make 函数 */
+  map_variable := make(map[key_data_type]value_data_type)
+  ```
+
+### 操作
+
+- 插入
+
+  ```go
+  /* map插入key - value对,各个国家对应的首都 */
+      countryCapitalMap [ "France" ] = "巴黎"
+      countryCapitalMap [ "Italy" ] = "罗马"
+      countryCapitalMap [ "Japan" ] = "东京"
+      countryCapitalMap [ "India " ] = "新德里"
+  ```
+
+- 判断key是否存在
+
+  ```go
+   /*查看元素在集合中是否存在 */
+      capital, ok := countryCapitalMap [ "American" ] /*如果确定是真实的,则存在,否则不存在 */
+      /*fmt.Println(capital) */
+      /*fmt.Println(ok) */
+      if (ok) {
+          fmt.Println("American 的首都是", capital)
+      } else {
+          fmt.Println("American 的首都不存在")
+      }
+  /* output 
+  India  首都是 新德里
+  American 的首都不存在
+  */
+  ```
+
+- 遍历
+
+  ```go
+   /*使用键输出地图值 */ 
+      for country := range countryCapitalMap {
+          fmt.Println(country, "首都是", countryCapitalMap [country])
+      }
+  ```
+
+- 删除元素
+
+  ```go
+  delete(countryCapitalMap, "France")
+  ```
+
+# 语言设计
+
+## 接口
+
+- 定义
+
+  ```go
+  /* 定义接口 */
+  type interface_name interface {
+     method_name1 [return_type]
+     method_name2 [return_type]
+     method_name3 [return_type]
+     ...
+     method_namen [return_type]
+  }
+  /* 定义结构体 */
+  type struct_name struct {
+     /* variables */
+  }
+  ```
+
+- 实现
+
+  ```go
+  func (struct_name_variable struct_name) method_namen() [return_type] {
+     /* 方法实现*/
+  }
+  ```
+
+```go
+// demo
+package main
+
+import (
+    "fmt"
+)
+
+type Phone interface {
+    call()
+}
+
+type NokiaPhone struct {
+}
+
+func (nokiaPhone NokiaPhone) call() {
+    fmt.Println("I am Nokia, I can call you!")
+}
+
+type IPhone struct {
+}
+
+func (iPhone IPhone) call() {
+    fmt.Println("I am iPhone, I can call you!")
+}
+
+func main() {
+    var phone Phone
+
+    phone = new(NokiaPhone)
+    phone.call()
+
+    phone = new(IPhone)
+    phone.call()
+
+}
+```
+
+- 注意make和new关键字（详细参考[Go语言 make和new关键字的区别](https://www.cnblogs.com/personblog/p/12261959.html))
+
+  Go语言中 new 和 make 是两个内置函数，主要用来创建并分配类型的内存。在我们定义变量的时候，可能会觉得有点迷惑，不知道应该使用哪个函数来声明变量，其实他们的规则很简单，new 只分配内存，而 make 只能用于 slice、map 和 channel 的初始化。
+
+  - new 函数只接受一个参数，这个参数是一个类型，并且**返回一个指向该类型内存地址的指针**。同时 new 函数会把分配的内存置为零，也就是类型的零值。　　　　
+  - make 也是用于内存分配的，但是和 new 不同，它只用于 chan、map 以及 slice 的内存创建，而且它返回的类型就是这三个类型本身，而不是他们的指针类型，因为这三种类型就是引用类型，所以就没有必要返回他们的指针了。
+
+## 错误处理
+
+Go 语言通过内置的错误接口提供了非常简单的错误处理机制。
+
+### 定义
+
+```go
+type error interface {
+    Error() string
+}
+```
+
+### 使用
+
+- errors.New(...)
+
+  ```go
+  func Sqrt(f float64) (float64, error) {
+      if f < 0 {
+          return 0, errors.New("math: square root of negative number")
+      }
+      // 实现
+  }
+  ```
+
+- 自定义实现Error()
+
+  ```go
+  package main
+  
+  import (
+      "fmt"
+  )
+  
+  // 定义一个 DivideError 结构
+  type DivideError struct {
+      dividee int
+      divider int
+  }
+  
+  // 实现 `error` 接口
+  func (de *DivideError) Error() string {
+      strFormat := `
+      Cannot proceed, the divider is zero.
+      dividee: %d
+      divider: 0
+  `
+      return fmt.Sprintf(strFormat, de.dividee)
+  }
+  
+  // 定义 `int` 类型除法运算的函数
+  func Divide(varDividee int, varDivider int) (result int, errorMsg string) {
+      if varDivider == 0 {
+              dData := DivideError{
+                      dividee: varDividee,
+                      divider: varDivider,
+              }
+              errorMsg = dData.Error()
+              return
+      } else {
+              return varDividee / varDivider, ""
+      }
+  
+  }
+  
+  func main() {
+  
+      // 正常情况
+      if result, errorMsg := Divide(100, 10); errorMsg == "" {
+              fmt.Println("100/10 = ", result)
+      }
+      // 当除数为零的时候会返回错误信息
+      if _, errorMsg := Divide(100, 0); errorMsg != "" {
+              fmt.Println("errorMsg is: ", errorMsg)
+      }
+  
+  }
+  ```
+
+## 并发
+
+Go 允许使用 go 语句开启一个新的运行期线程， 即 goroutine，以一个不同的、新创建的 goroutine 来执行一个函数。 同一个程序中的所有 goroutine 共享同一个地址空间。
+
+Go 语言支持并发，我们只需要通过 go 关键字来开启 goroutine 即可。
+
+goroutine 是轻量级线程，goroutine 的调度是由 Golang 运行时进行管理的。
+
+### goroutine语法
+
+```go
+go 函数名( 参数列表 )
+```
+
+### 线程通信
+
+通道（channel）是用来传递数据的一个数据结构。
+
+通道可用于两个 goroutine 之间通过传递一个指定类型的值来同步运行和通讯。操作符 `<-` 用于指定通道的方向，发送或接收。如果未指定方向，则为双向通道。
+
+```go
+ch <- v    // 把 v 发送到通道 ch
+v := <-ch  // 从 ch 接收数据
+           // 并把值赋给 v
+```
+
+#### 通道声明
+
+- 声明通道 chan关键字
+
+  ```go
+  ch := make(chan int)
+  ```
+
+- 带缓冲区的通道
+
+  ```go
+  ch := make(chan int, 100)
+  ```
+
+#### 通信中的阻塞
+
+带缓冲区的通道允许发送端的数据发送和接收端的数据获取处于异步状态，就是说发送端发送的数据可以放在缓冲区里面，可以等待接收端去获取数据，而不是立刻需要接收端去获取数据。
+
+不过由于缓冲区的大小是有限的，所以还是必须有接收端来接收数据的，否则缓冲区一满，数据发送端就无法再发送数据了。
+
+**注意**：如果通道不带缓冲，发送方会阻塞直到接收方从通道中接收了值。如果通道带缓冲，发送方则会阻塞直到发送的值被拷贝到缓冲区内；如果缓冲区已满，则意味着需要等待直到某个接收方获取到一个值。接收方在有值可以接收之前会一直阻塞。
+
+#### 遍历通道
+
+Go 通过 range 关键字来实现遍历读取到的数据，类似于与数组或切片
+
+```go
+package main
+
+import (
+        "fmt"
+)
+
+func fibonacci(n int, c chan int) {
+        x, y := 0, 1
+        for i := 0; i < n; i++ {
+                c <- x
+                x, y = y, x+y
+        }
+        close(c)
+}
+
+func main() {
+        c := make(chan int, 10)
+        go fibonacci(cap(c), c)
+        // range 函数遍历每个从通道接收到的数据，因为 c 在发送完 10 个
+        // 数据之后就关闭了通道，所以这里我们 range 函数在接收到 10 个数据
+        // 之后就结束了。如果上面的 c 通道不关闭，那么 range 函数就不
+        // 会结束，从而在接收第 11 个数据的时候就阻塞了。
+        for i := range c {
+                fmt.Println(i)
+        }
+}
+```
+
+#### 通道关闭
+
+接收数据时格式如下：
+
+```go
+v, ok := <-ch
+```
+
+如果通道接收不到数据后 ok 就为 false，这时通道就可以使用 **close()** 函数来关闭
