添加mysql博客中函数的参考链接

--- a/_posts/2021-06-30-SQL语句与MySQL基础原理.md
+++ b/_posts/2021-06-30-SQL语句与MySQL基础原理.md
@@ -250,14 +250,17 @@ mysql内连接 [inner] join on
 ### 分页查询
 
 ## 常见函数
+
+详细参考[mysql函数](https://www.runoob.com/mysql/mysql-functions.html)
+
 ### 字符函数
 <img src="/../assets/MySQL/1240-20210630204744547.png" alt="image.png" style="zoom:50%;" />
 
-####（1）大小写控制函数
+#### 大小写控制函数
 
 <img src="/../assets/MySQL/1240-20210630204744561.png" alt="image.png" style="zoom:50%;" />
 
-####（2）字符控制函数
+#### 字符控制函数
 
 <img src="/../assets/MySQL/1240-20210630204744587.png" alt="image.png" style="zoom:50%;" />
 
