update nk-sql blog

--- a/_posts/2021-09-28-牛客SQL总结.md
+++ b/_posts/2021-09-28-牛客SQL总结.md
@@ -40,6 +40,31 @@ where emp_no=10005
 ALTER TABLE actor ADD create_date datetime NOT NULL DEFAULT '2020-10-01 00:00:00'
 ```
 
+## SQL41（触发器）
+
+<img src="/../assets/NK-SQL/image-20211008125722460.png" alt="image-20211008125722460" style="zoom:50%;" />
+
+```sql
+create trigger audit_log 
+after insert on employees_test
+for each row
+begin 
+    insert into audit values(new.id,new.name);
+end
+```
+
+## SQL46
+
+<img src="/../assets/NK-SQL/image-20211008145453608.png" alt="image-20211008145453608" style="zoom:50%;" />
+
+```sql
+ALTER TABLE audit
+ADD CONSTRAINT FOREIGN KEY (emp_no)
+REFERENCES employees_test(id);
+```
+
+
+
 # 查询
 
 ## 最值
@@ -351,5 +376,43 @@ VALUES(1,'PENELOPE','GUINESS','2006-02-15 12:34:33'),
 #             或者unique索引，如果数据库已经存在数据，则用新数据替换，如果没有数据效果则和insert into一样；
 # insert ignore表示，如果中已经存在相同的记录，则忽略当前新数据；
 insert ignore into actor values("3","ED","CHASE","2006-02-15 12:34:33");
+```
+
+# 删除
+
+## SQL42
+
+<img src="/../assets/NK-SQL/image-20211008143658302.png" alt="image-20211008143658302" style="zoom:50%;" />
+
+```sql
+DELETE
+    t2.*
+FROM
+    `titles_test` t1,
+    `titles_test` t2
+WHERE
+    t1.emp_no = t2.emp_no and
+    t1.id < t2.id
+```
+
+# 更新
+
+## SQL48
+
+<img src="/../assets/NK-SQL/image-20211008145613875.png" alt="image-20211008145613875" style="zoom:50%;" />
+
+```sql
+UPDATE
+    salaries
+SET
+    salary = salary + salary * 0.1
+WHERE
+    emp_no in (
+        select
+            emp_no
+        from
+            emp_bonus
+    ) and
+    to_date = '9999-01-01'
 ```
 
