update NK-SQL blog

--- a/_posts/2021-09-28-牛客SQL总结.md
+++ b/_posts/2021-09-28-牛客SQL总结.md
@@ -71,7 +71,7 @@ REFERENCES employees_test(id);
 
 ### SQL2
 
-<img src="//../assets/NK-SQL/image-20210928160517266.png" alt="image-20210928160517266" style="zoom:50%;" />
+<img src="/../assets/NK-SQL/image-20210928160517266.png" alt="image-20210928160517266" style="zoom:50%;" />
 
 ```sql
 select 
@@ -83,13 +83,13 @@ order by
 limit 2, 1;
 ```
 
-主页limit第一参数为(页数 - 1)
+主页limit第一参数为(页数 - 1)*每页数量
 
 ## 去重
 
 ### SQL8
 
-<img src="//../assets/NK-SQL/image-20210928161305190.png" alt="image-20210928161305190" style="zoom:50%;" />
+<img src="/../assets/NK-SQL/image-20210928161305190.png" alt="image-20210928161305190" style="zoom:50%;" />
 
 ```sql
 SELECT
@@ -104,7 +104,7 @@ ORDER BY
 
 ### SQL10
 
-<img src="//../assets/NK-SQL/image-20210928161526148.png" alt="image-20210928161526148" style="zoom:50%;" />
+<img src="/../assets/NK-SQL/image-20210928161526148.png" alt="image-20210928161526148" style="zoom:50%;" />
 
 ```sql
 SELECT
@@ -121,7 +121,7 @@ WHERE
 
 ### SQL11
 
-<img src="//../assets/NK-SQL/image-20210928161633124.png" alt="image-20210928161633124" style="zoom:50%;" />
+<img src="/../assets/NK-SQL/image-20210928161633124.png" alt="image-20210928161633124" style="zoom:50%;" />
 
 ```sql
 SELECT
@@ -141,7 +141,7 @@ group BY
 
 ### SQL12
 
-<img src="//../assets/NK-SQL/image-20210928161812571.png" alt="image-20210928161812571" style="zoom:50%;" />
+<img src="/../assets/NK-SQL/image-20210928161812571.png" alt="image-20210928161812571" style="zoom:50%;" />
 
 ```sql
 select 
@@ -173,7 +173,7 @@ order by
 
 ### SQL19
 
-<img src="//../assets/NK-SQL/image-20210928162304345.png" alt="image-20210928162304345" style="zoom:50%;" />
+<img src="/../assets/NK-SQL/image-20210928162304345.png" alt="image-20210928162304345" style="zoom:50%;" />
 
 ```sql
 SELECT
@@ -288,6 +288,59 @@ WHERE
     s.salary > t.manager_salary
 ```
 
+### SQL57
+
+<img src="/../assets/NK-SQL/image-20211014110619032.png" alt="image-20211014110619032" style="zoom:50%;" />
+
+```sql
+select * from employees e
+where not exists
+(select emp_no from dept_emp d where d.emp_no = e.emp_no);
+```
+
+### SQL59
+
+<img src="/../assets/NK-SQL/image-20211014110731335.png" alt="image-20211014110731335" style="zoom:50%;" />
+
+```sql
+SELECT 
+    e.emp_no, 
+    e.first_name, 
+    e.last_name, 
+    eb.btype, 
+    s.salary,
+    CASE 
+        WHEN eb.btype = 1 THEN s.salary * 0.1
+        WHEN eb.btype = 2 THEN s.salary * 0.2
+        ELSE s.salary * 0.3
+    END bonus
+FROM 
+    emp_bonus AS eb, 
+    employees AS e, 
+    salaries AS s
+WHERE 
+    eb.emp_no = e.emp_no AND 
+    s.emp_no = e.emp_no AND 
+    s.to_date='9999-01-01';
+```
+
+### SQL64
+
+<img src="/../assets/NK-SQL/image-20211014111431630.png" alt="image-20211014111431630" style="zoom:50%;" />
+
+```sql
+SELECT
+    p.id,
+    p.name,
+    t.content
+from
+    person p
+left join
+    task t
+on
+    p.id = t.person_id
+```
+
 
 
 ## 排名序号
@@ -313,13 +366,36 @@ ORDER BY
     t_rank
 ```
 
+### SQL63
+
+<img src="/../assets/NK-SQL/image-20211014111320786.png" alt="image-20211014111320786" style="zoom:50%;" />
+
+```sql
+SELECT
+    p1.id,
+    p1.number,
+    count(distinct p2.number) as t_rank
+FROM
+    passing_number p1
+JOIN
+    passing_number p2
+ON
+    p1.number <= p2.number
+GROUP BY
+    id, number
+order BY
+    t_rank
+```
+
+
+
 ## 函数
 
 ### 聚合函数
 
 #### SQL16
 
-<img src="//../assets/NK-SQL/image-20210928162059085.png" alt="image-20210928162059085" style="zoom:50%;" />
+<img src="/../assets/NK-SQL/image-20210928162059085.png" alt="image-20210928162059085" style="zoom:50%;" />
 
 ```sql
 SELECT
@@ -337,6 +413,43 @@ ORDER BY
     avg(s.salary)
 ```
 
+#### SQL54
+
+<img src="/../assets/NK-SQL/image-20211014110031225.png" alt="image-20211014110031225" style="zoom:50%;" />
+
+```sql
+SELECT
+    AVG(salary)
+FROM
+    salaries
+WHERE
+    to_date = '9999-01-01' and
+    salary not in (
+        select
+            max(salary)
+        from
+            salaries
+        where to_date = '9999-01-01'
+    ) and
+    salary not in(
+        select
+            min(salary)
+        from
+            salaries
+        where to_date = '9999-01-01'
+    )
+```
+
+#### SQL62
+
+<img src="/../assets/NK-SQL/image-20211014111141842.png" alt="image-20211014111141842" style="zoom:50%;" />
+
+```sql
+select number from grade group by number having count(*)>=3
+```
+
+
+
 ### 系统函数
 
 #### SQL32
@@ -349,6 +462,124 @@ SELECT
 from
     employees
 ```
+
+#### SQL51
+
+<img src="/../assets/NK-SQL/image-20211012164126524.png" alt="image-20211012164126524" style="zoom:50%;" />
+
+```sql
+SELECT
+    LENGTH("10,A,B") - LENGTH(REPLACE("10,A,B", ",", "")) as cnt;
+```
+
+#### SQL52
+
+<img src="/../assets/NK-SQL/image-20211012164214515.png" alt="image-20211012164214515" style="zoom:50%;" />
+
+```sql
+SELECT
+    first_name
+FROM
+    employees
+ORDER BY
+    SUBSTR(first_name, LENGTH(first_name) - 1, LENGTH(first_name));
+```
+
+#### SQL53
+
+<img src="/../assets/NK-SQL/image-20211014105909840.png" alt="image-20211014105909840" style="zoom:50%;" />
+
+```sql
+select dept_no, group_concat(emp_no) as employees
+from dept_emp
+group by dept_no
+```
+
+#### SQL60
+
+<img src="/../assets/NK-SQL/image-20211014110905479.png" alt="image-20211014110905479" style="zoom:50%;" />
+
+```sql
+SELECT s1.emp_no, s1.salary,
+(SELECT SUM(s2.salary)
+FROM salaries AS s2
+WHERE s2.emp_no <= s1.emp_no
+AND s2.to_date = '9999-01-01') AS running_total
+FROM salaries AS s1
+WHERE s1.to_date = '9999-01-01'
+ORDER BY s1.emp_no
+```
+
+#### SQL65
+
+<img src="/../assets/NK-SQL/image-20211014111602913.png" alt="image-20211014111602913" style="zoom:50%;" />
+
+```sql
+select 
+    email.date, 
+    round(
+        sum(
+            case email.type 
+                when'completed' then 0 
+                else 1 
+            end) * 1.0 / count(email.type), 3) as p
+from 
+    email
+join
+    user as u1 
+on 
+    email.send_id=u1.id and 
+    u1.is_blacklist=0
+join 
+    user as u2 
+on 
+    email.receive_id=u2.id and 
+    u2.is_blacklist=0
+group by 
+    email.date 
+order by 
+    email.date;
+```
+
+
+
+### 窗口函数
+
+#### SQL61
+
+<img src="/../assets/NK-SQL/image-20211014111026521.png" alt="image-20211014111026521" style="zoom:50%;" />
+
+```sql
+SELECT
+    e.first_name
+FROM employees e JOIN
+(
+    SELECT 
+        first_name
+        , ROW_NUMBER() OVER(ORDER BY first_name ASC) AS  r_num
+    FROM employees
+) AS t 
+ON e.first_name = t.first_name
+WHERE t.r_num % 2 = 1;
+```
+
+
+
+## 分页
+
+### SQL55
+
+<img src="/../assets/NK-SQL/image-20211014110439716.png" alt="image-20211014110439716" style="zoom:50%;" />
+
+```sql
+SELECT
+    *
+FROM
+    employees
+limit 5, 5
+```
+
+
 
 # 插入
 
