update nk-sql blog

--- a/_posts/2021-09-28-牛客SQL总结.md
+++ b/_posts/2021-09-28-牛客SQL总结.md
@@ -541,7 +541,70 @@ order by
     email.date;
 ```
 
+#### SQL69
 
+<img src="/../assets/NK-SQL/image-20211018142049652.png" alt="image-20211018142049652" style="zoom:50%;" />
+
+```sql
+select 
+    distinct date,
+    sum(
+        case 
+            when (user_id,date) in 
+                (select 
+                     user_id,
+                     min(date)
+                 from 
+                     login 
+                 group by user_id)
+            then 1 
+            else 0 
+        end)
+from login
+group by date
+order by date;
+```
+
+#### SQL70
+
+<img src="/../assets/NK-SQL/image-20211018142212720.png" alt="image-20211018142212720" style="zoom:50%;" />
+
+```sql
+select 
+    date,
+    ifnull(
+        round(
+            (sum(
+                case 
+                    when (user_id,date) in
+                        (select 
+                             user_id,
+                             date_add(date,interval -1 day) 
+                         from login)  and 
+                        (user_id,date)in 
+                        (select 
+                             user_id,
+                             min(date)
+                         from login 
+                         group by user_id)
+                    then 1 
+                    else 0 
+                end))/
+            (sum(
+                case 
+                    when (user_id,date)in
+                        (select 
+                             user_id,
+                             min(date)
+                         from login 
+                         group by user_id)
+                    then 1 
+                    else 0 
+                end)),3),0)as p
+from login
+group by date
+order by date;
+```
 
 ### 窗口函数
 
@@ -563,7 +626,84 @@ ON e.first_name = t.first_name
 WHERE t.r_num % 2 = 1;
 ```
 
+#### SQL68
 
+<img src="/../assets/NK-SQL/image-20211018141757866.png" alt="image-20211018141757866" style="zoom:50%;" />
+
+```sql
+select 
+round(count(distinct user_id)*1.0/(select count(distinct user_id) from login) ,3)
+from login
+where (user_id,date)
+in (select user_id,DATE_ADD(min(date),INTERVAL 1 DAY) from login group by user_id);
+```
+
+#### SQL71
+
+<img src="/../assets/NK-SQL/image-20211018142622482.png" alt="image-20211018142622482" style="zoom:50%;" />
+
+```sql
+select u.name as u_n
+        ,p.date as date
+        ,sum(p.number)over(partition by u.name order by date)as ps_num
+from passing_number p,user u
+where p.user_id=u.id
+order by p.date,u.name;
+```
+
+#### SQL74
+
+<img src="/../assets/NK-SQL/image-20211018142935185.png" alt="image-20211018142935185" style="zoom:50%;" />
+
+```sql
+SELECT a.id, l.name, a.score
+FROM
+language AS l
+JOIN
+(SELECT id, language_id, score, dense_rank()over(PARTITION BY language_id ORDER BY score DESC) AS rank_num
+FROM grade)a
+ON l.id = a.language_id
+WHERE rank_num <=2
+ORDER BY l.name, a.score DESC, a.id;
+```
+
+#### SQL76
+
+<img src="/../assets/NK-SQL/image-20211018143208316.png" alt="image-20211018143208316" style="zoom:50%;" />
+
+```sql
+select 
+    id
+    ,g.job as job
+    ,score
+    ,rk
+from (
+    select 
+        id
+        ,job
+        ,score
+        ,row_number() over(
+            partition by job
+            order by score desc
+        ) as rk
+    from grade 
+) g
+
+join (
+    select
+        job
+        ,floor((count(id) + 1)/ 2) as m1
+        ,ceiling((count(id) + 1)/ 2) as m2
+    from grade
+    group by job
+) m
+
+on g.job = m.job
+
+where rk between m1 and m2          -- 过滤，保证row_number处于中位数位置
+
+order by id;
+```
 
 ## 分页
 
